CSS pre-heroku donut spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -692,6 +692,7 @@ footer {
 		flex-direction: row;
 		width: 80%;
 		margin: 0 auto;
+		padding: 2rem 0;
 	}
 	#homerText-container {
 		/* background: blue; */
@@ -701,12 +702,14 @@ footer {
 		font-size: 3rem;
 		margin: 0;
 		padding: 0;
+		padding-left: 5rem;
 	}
 	#homerText > br {
 		display: none;
 	}
 	#donut-home-container {
 		/* background: red; */
+		padding-right: 5rem;
 	}
 	#donut-home {
 		/* border: 4px solid green; */
@@ -730,8 +733,8 @@ footer {
 	/*--------- FOOTER ------------------*/
 	/* ICEBOX: fix CSS Grid for footer in media query */
 	#footer-container {
-		padding: 3rem 5rem;
-		font-size: 1.25rem;
+		padding: 2rem 2rem 0.5rem;
+		font-size: 1.1rem;
 	}
 	#footer-container ul {
 		padding: 0;
@@ -1074,7 +1077,7 @@ footer {
 }
 .card_title {
 	font-size: 1.75rem;
-	text-align: center;
+	text-align: left;
 }
 .card_image {
 	border: 4px solid black;
@@ -1104,6 +1107,9 @@ footer {
 	/* MOBILE */
 	.card_grid_item {
 		width: calc(100%);
+	}
+	.card_title {
+		text-align: center;
 	}
 	.card_image {
 		border: 4px solid black;
